--- a/lang/en.json
+++ b/lang/en.json
@@ -137,15 +137,12 @@
 "MB.WieldAPower": "Wield a Power",
 "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
 
-"SETTINGS.MBBackgroundColor": "Background Color",
-"SETTINGS.MBBackgroundColorHint": "Choose a color for the UI background.",
-"SETTINGS.MBBlack": "Black",
-"SETTINGS.MBForegroundColor": "Foreground Color",
-"SETTINGS.MBForegroundColorHint": "Choose a color for the UI foreground (text).",
-"SETTINGS.MBGray": "Gray",
-"SETTINGS.MBHighlightColor": "Highlight Color",
-"SETTINGS.MBHighlightColorHint": "Choose a color for the UI highlights.",
-"SETTINGS.MBPink": "Pink",
-"SETTINGS.MBWhite": "White",
-"SETTINGS.MBYellow": "Yellow"
+"SETTINGS.MBBlackOnWhiteBlack": "Black on white (black)",
+"SETTINGS.MBBlackOnYellowWhite": "Black on yellow (white)",
+"SETTINGS.MBColorScheme": "Color Scheme",
+"SETTINGS.MBColorSchemeHint": "Choose a color scheme for the UI.",
+"SETTINGS.MBWhiteOnBlackPink": "White on black (pink)",
+"SETTINGS.MBWhiteOnBlackWhite": "White on black (white)",
+"SETTINGS.MBWhiteOnBlackYellow": "White on black (yellow)",
+"SETTINGS.MBWhiteOnPinkWhite": "White on pink (white)"
 }
