First cut of fontSchemes.

--- a/lang/en.json
+++ b/lang/en.json
@@ -137,10 +137,14 @@
 "MB.WieldAPower": "Wield a Power",
 "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
 
+"SETTINGS.MBBlackletter": "Blackletter",
 "SETTINGS.MBBlackOnWhiteBlack": "Black on white (black)",
 "SETTINGS.MBBlackOnYellowWhite": "Black on yellow (white)",
 "SETTINGS.MBColorScheme": "Color Scheme",
 "SETTINGS.MBColorSchemeHint": "Choose a color scheme for the UI.",
+"SETTINGS.MBFontScheme": "Font Scheme",
+"SETTINGS.MBFontSchemeHint": "Choose a font scheme for the UI.",
+"SETTINGS.MBLegible": "Legible",
 "SETTINGS.MBWhiteOnBlackPink": "White on black (pink)",
 "SETTINGS.MBWhiteOnBlackWhite": "White on black (white)",
 "SETTINGS.MBWhiteOnBlackYellow": "White on black (yellow)",
