Add missing Swedish translations.

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -20,6 +20,7 @@
 "MB.Attack": "Attack",
 "MB.AttackCritText": "Succé: ×2 skada, rustningen/ skyddet sänks också en nivå.",
 "MB.AttackFumbleText": "Fummel: Vapnet går sönder eller förloras.",
+"MB.Base": "Bas",
 "MB.CarryWeight": "Vikt",
 "MB.Carrying": "Bärande",
 "MB.CarryingCapacity": "Bärförmåga",
@@ -76,17 +77,19 @@
 "MB.ItemTypeArmorPlural": "Rustning",
 "MB.ItemTypeClass": "Klass",
 "MB.ItemTypeContainer": "Behållare",
+"MB.ItemTypeFeat": "Bedrift",
+"MB.ItemTypeFeatPlural": "Bedrifter",
 "MB.ItemTypeMisc": "Diverse",
 "MB.ItemTypeScroll": "Pergamentrulle",
 "MB.ItemTypeScrollPlural": "Pergamentrullar",
 "MB.ItemTypeShield": "Sköld",
-"MB.ItemTypeSpecial": "Särskild",
 "MB.ItemTypeWeapon": "Vapen",
 "MB.ItemTypeWeaponPlural": "Vapen",
 "MB.ItemUnequipped": "Outrustad",
 "MB.ItemWeaponType": "Vapentyp",
 "MB.Miseries": "Plågor",
 "MB.Miss": "MISSA",
+"MB.Modified": "Beräknad",
 "MB.Morale": "Moral",
 "MB.MoraleFlees": "Flyr",
 "MB.MoraleSurrenders": "Ger upp",
@@ -105,6 +108,8 @@
 "MB.ReactionIndifferent": "Obrydd",
 "MB.ReactionKill": "Döda!",
 "MB.Roll": "Rulla",
+"MB.RollFormula": "Rulla Formel",
+"MB.RollLabel": "Rulla Märka",
 "MB.ScrollTypeSacred": "Helig",
 "MB.ScrollTypeUnclean": "Vanhelga",
 "MB.SheetClassCharacter": "Mörk Borg Rollformulär",
@@ -116,6 +121,7 @@
 "MB.StandsFirm": "Står fast",
 "MB.TabDescription": "Beskrivning",
 "MB.TabDetails": "Detaljer",
+"MB.TabFeats": "Feats",
 "MB.TabObituary": "Dödsruna",
 "MB.TabPowers": "Krafter",
 "MB.TabTreasures": "Skatter",
@@ -129,5 +135,18 @@
 "MB.WeaponTypeMelee": "Närkamp",
 "MB.WeaponTypeRanged": "Avstånd",
 "MB.WieldAPower": "Nyttja en Kraft",
-"MB.WieldAPowerText": "NÄR SG12 eller -t2 TP och inga Krafter i 1 tim."
+"MB.WieldAPowerText": "NÄR SG12 eller -t2 TP och inga Krafter i 1 tim.",
+
+"SETTINGS.MBBlackletter": "Blackletter",
+"SETTINGS.MBBlackOnWhiteBlack": "Svart på vit (svart)",
+"SETTINGS.MBBlackOnYellowWhite": "Svart på gul (vit)",
+"SETTINGS.MBColorScheme": "Färgschema",
+"SETTINGS.MBColorSchemeHint": "Välja UI färgschema.",
+"SETTINGS.MBFontScheme": "Fontschema",
+"SETTINGS.MBFontSchemeHint": "Välja UI fontschema.",
+"SETTINGS.MBLegible": "Läsbar",
+"SETTINGS.MBWhiteOnBlackPink": "Vit på svart (rosa)",
+"SETTINGS.MBWhiteOnBlackWhite": "Vit på svart (vit)",
+"SETTINGS.MBWhiteOnBlackYellow": "Vit på svart (gul)",
+"SETTINGS.MBWhiteOnPinkWhite": "Vit på rosa (vit)"
 }
