--- a/lang/sv.json
+++ b/lang/sv.json
@@ -77,8 +77,8 @@
 "MB.ItemTypeArmorPlural": "Rustning",
 "MB.ItemTypeClass": "Klass",
 "MB.ItemTypeContainer": "Behållare",
-"MB.ItemTypeFeat": "Bedrift",
-"MB.ItemTypeFeatPlural": "Bedrifter",
+"MB.ItemTypeFeat": "Förmåga",
+"MB.ItemTypeFeatPlural": "Förmågor",
 "MB.ItemTypeMisc": "Diverse",
 "MB.ItemTypeScroll": "Pergamentrulle",
 "MB.ItemTypeScrollPlural": "Pergamentrullar",
@@ -121,7 +121,7 @@
 "MB.StandsFirm": "Står fast",
 "MB.TabDescription": "Beskrivning",
 "MB.TabDetails": "Detaljer",
-"MB.TabFeats": "Feats",
+"MB.TabFeats": "Förmågor",
 "MB.TabObituary": "Dödsruna",
 "MB.TabPowers": "Krafter",
 "MB.TabTreasures": "Skatter",
