Adds short and long rest buttons to character sheet
Signed-off-by: Ian Henry <ianjhenry00@gmail.com>

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -57,6 +57,7 @@
 "MB.HandedTwo": "Tvåhands",
 "MB.Hit": "TRÄFFA",
 "MB.HitPoints": "Träffpoäng",
+"MB.HP":"TP",
 "MB.IncomingAttack": "Inkommande Attack",
 "MB.Initiative": "Initiativ",
 "MB.Is": "är",
@@ -87,6 +88,7 @@
 "MB.ItemTypeWeaponPlural": "Vapen",
 "MB.ItemUnequipped": "Outrustad",
 "MB.ItemWeaponType": "Vapentyp",
+"MB.LongRest": "Länge Vila",
 "MB.Miseries": "Plågor",
 "MB.Miss": "MISSA",
 "MB.Modified": "Beräknad",
@@ -107,6 +109,7 @@
 "MB.ReactionHelpful": "Hjälpsam",
 "MB.ReactionIndifferent": "Obrydd",
 "MB.ReactionKill": "Döda!",
+"MB.ShortRest": "Kort Vila",
 "MB.Roll": "Rulla",
 "MB.RollFormula": "Rulla Formel",
 "MB.RollLabel": "Rulla Märka",
