--- a/lang/en.json
+++ b/lang/en.json
@@ -57,6 +57,7 @@
 "MB.HandedTwo": "Two-handed",
 "MB.Hit": "HIT",
 "MB.HitPoints": "Hit Points",
+"MB.HP": "HP",
 "MB.IncomingAttack": "Incoming Attack",
 "MB.Initiative": "Initiative",
 "MB.Is": "is",
@@ -87,6 +88,7 @@
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemUnequipped": "Unequipped",
 "MB.ItemWeaponType": "Weapon Type",
+"MB.LongRest": "Long Rest",
 "MB.Miseries": "Miseries",
 "MB.Miss": "MISS",
 "MB.Modified": "Modified",
@@ -117,6 +119,7 @@
 "MB.SheetClassFollower": "Default Mork Borg Follower Sheet",
 "MB.Shield": "Shield",
 "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
+"MB.ShortRest": "Short Rest",
 "MB.Silver": "Silver",
 "MB.StandsFirm": "Stands firm",
 "MB.TabDescription": "Description",
