Expose quantity for misc items, and use it for carrying and containers.

--- a/lang/en.json
+++ b/lang/en.json
@@ -103,6 +103,7 @@
 "MB.Powers": "Powers",
 "MB.PowersPerDayText": "PRE+d4 times per day",
 "MB.PowerUsesRemaining": "Uses Remaining",
+"MB.Quantity": "Quantity",
 "MB.Reaction": "Reaction",
 "MB.ReactionAlmostFriendly": "Almost friendly",
 "MB.ReactionAngered": "Angered",
