--- a/lang/sv.json
+++ b/lang/sv.json
@@ -103,6 +103,7 @@
 "MB.PowerUsesRemaining": "Gånger",
 "MB.Powers": "Krafter",
 "MB.PowersPerDayText": "NÄR+t4 antal per dygn",
+"MB.Quantity": "Kvantitet",
 "MB.Reaction": "Reaktion",
 "MB.ReactionAlmostFriendly": "Veligt vänlig",
 "MB.ReactionAngered": "Förbannad",
