Show exploded roll results and target DR for rolls.

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -137,6 +137,7 @@
 "MB.Tier": "Nivå",
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Typ",
+"MB.Vs": "mot",
 "MB.WeaponTypeMelee": "Närkamp",
 "MB.WeaponTypeRanged": "Avstånd",
 "MB.WieldAPower": "Nyttja en Kraft",
