Add group and individual initiative buttons.

--- a/lang/en.json
+++ b/lang/en.json
@@ -60,7 +60,10 @@
 "MB.HitPoints": "Hit Points",
 "MB.HP": "HP",
 "MB.IncomingAttack": "Incoming Attack",
+"MB.IndividualInitiative": "Individual Initiative",
 "MB.Initiative": "Initiative",
+"MB.InitiativeEnemiesBegin": "Enemies Begin",
+"MB.InitiativePlayerCharactersBegin": "Player Characters Begin",
 "MB.Is": "is",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
@@ -99,6 +102,7 @@
 "MB.Name": "Name",
 "MB.Omens": "Omens",
 "MB.Outcome": "Outcome",
+"MB.PartyInitiative": "Party Initiative",
 "MB.PerDay": "Per Day",
 "MB.PerRest": "Per Rest",
 "MB.Powers": "Powers",
