--- a/lang/sv.json
+++ b/lang/sv.json
@@ -60,7 +60,10 @@
 "MB.HitPoints": "Träffpoäng",
 "MB.HP":"TP",
 "MB.IncomingAttack": "Inkommande Attack",
+"MB.IndividualInitiative": "Individuellt Initiativ",
 "MB.Initiative": "Initiativ",
+"MB.InitiativeEnemiesBegin": "Fienderna Börjar",
+"MB.InitiativePlayerCharactersBegin": "Rollpersonerna Börjar",
 "MB.Is": "är",
 "MB.ItemAgilityDRModifier": "Smidighet SG Modifikation",
 "MB.ItemCapacity": "Kapacitet",
@@ -99,6 +102,7 @@
 "MB.Name": "Namn",
 "MB.Omens": "Järtecken",
 "MB.Outcome": "Resultat",
+"MB.PartyInitiative": "Grupp Individuellt",
 "MB.PerDay": "Per Dygn",
 "MB.PerRest": "Per Vila",
 "MB.PowerUsesRemaining": "Gånger",
