Remove initiative buttons from character sheet, and implement party initiative as a combat tracker button.

--- a/lang/en.json
+++ b/lang/en.json
@@ -60,7 +60,6 @@
 "MB.HitPoints": "Hit Points",
 "MB.HP": "HP",
 "MB.IncomingAttack": "Incoming Attack",
-"MB.IndividualInitiative": "Individual Initiative",
 "MB.Initiative": "Initiative",
 "MB.InitiativeEnemiesBegin": "Enemies Begin",
 "MB.InitiativePlayerCharactersBegin": "Player Characters Begin",
@@ -100,9 +99,9 @@
 "MB.MoraleFlees": "Flees",
 "MB.MoraleSurrenders": "Surrenders",
 "MB.Name": "Name",
+"MB.NoActiveEncounter": "No Active Encounter",
 "MB.Omens": "Omens",
 "MB.Outcome": "Outcome",
-"MB.PartyInitiative": "Party Initiative",
 "MB.PerDay": "Per Day",
 "MB.PerRest": "Per Rest",
 "MB.Powers": "Powers",
@@ -118,6 +117,7 @@
 "MB.Roll": "Roll",
 "MB.RollFormula": "Roll Formula",
 "MB.RollLabel": "Roll Label",
+"MB.RollPartyInitiative": "Roll Party Initiative",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
