--- a/lang/sv.json
+++ b/lang/sv.json
@@ -60,7 +60,6 @@
 "MB.HitPoints": "Träffpoäng",
 "MB.HP":"TP",
 "MB.IncomingAttack": "Inkommande Attack",
-"MB.IndividualInitiative": "Individuellt Initiativ",
 "MB.Initiative": "Initiativ",
 "MB.InitiativeEnemiesBegin": "Fienderna Börjar",
 "MB.InitiativePlayerCharactersBegin": "Rollpersonerna Börjar",
@@ -100,9 +99,9 @@
 "MB.MoraleFlees": "Flyr",
 "MB.MoraleSurrenders": "Ger upp",
 "MB.Name": "Namn",
+"MB.NoActiveEncounter": "Inget aktivt möte",
 "MB.Omens": "Järtecken",
 "MB.Outcome": "Resultat",
-"MB.PartyInitiative": "Grupp Individuellt",
 "MB.PerDay": "Per Dygn",
 "MB.PerRest": "Per Vila",
 "MB.PowerUsesRemaining": "Gånger",
@@ -119,6 +118,7 @@
 "MB.Roll": "Rulla",
 "MB.RollFormula": "Rulla Formel",
 "MB.RollLabel": "Rulla Märka",
+"MB.RollPartyInitiative": "Rulla Grupp Initiativ",
 "MB.ScrollTypeSacred": "Helig",
 "MB.ScrollTypeUnclean": "Vanhelga",
 "MB.SheetClassCharacter": "Mörk Borg Rollformulär",
