Re-add MB.PartyInitiative.

--- a/lang/en.json
+++ b/lang/en.json
@@ -102,6 +102,7 @@
 "MB.NoActiveEncounter": "No Active Encounter",
 "MB.Omens": "Omens",
 "MB.Outcome": "Outcome",
+"MB.PartyInitiative": "Party Initiative",
 "MB.PerDay": "Per Day",
 "MB.PerRest": "Per Rest",
 "MB.Powers": "Powers",
