--- a/lang/sv.json
+++ b/lang/sv.json
@@ -102,6 +102,7 @@
 "MB.NoActiveEncounter": "Inget aktivt möte",
 "MB.Omens": "Järtecken",
 "MB.Outcome": "Resultat",
+"MB.PartyInitiative": "Grupp Initiativ",
 "MB.PerDay": "Per Dygn",
 "MB.PerRest": "Per Vila",
 "MB.PowerUsesRemaining": "Gånger",
