Add rest application window / dialog, and make it work.

--- a/lang/en.json
+++ b/lang/en.json
@@ -56,10 +56,12 @@
 "MB.FollowerValue": "Value",
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
+"MB.Heal": "Heal",
 "MB.Hit": "HIT",
 "MB.HitPoints": "Hit Points",
 "MB.HP": "HP",
 "MB.IncomingAttack": "Incoming Attack",
+"MB.Infection": "Infection",
 "MB.Initiative": "Initiative",
 "MB.InitiativeEnemiesBegin": "Enemies Begin",
 "MB.InitiativePlayerCharactersBegin": "Player Characters Begin",
@@ -91,7 +93,6 @@
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemUnequipped": "Unequipped",
 "MB.ItemWeaponType": "Weapon Type",
-"MB.LongRest": "Long Rest",
 "MB.Miseries": "Miseries",
 "MB.Miss": "MISS",
 "MB.Modified": "Modified",
@@ -100,6 +101,7 @@
 "MB.MoraleSurrenders": "Surrenders",
 "MB.Name": "Name",
 "MB.NoActiveEncounter": "No Active Encounter",
+"MB.NoEffect": "No effect",
 "MB.Omens": "Omens",
 "MB.Outcome": "Outcome",
 "MB.PartyInitiative": "Party Initiative",
@@ -115,6 +117,7 @@
 "MB.ReactionHelpful": "Helpful",
 "MB.ReactionIndifferent": "Indifferent",
 "MB.ReactionKill": "Kill!",
+"MB.Rest": "Rest",
 "MB.Roll": "Roll",
 "MB.RollFormula": "Roll Formula",
 "MB.RollLabel": "Roll Label",
@@ -126,9 +129,9 @@
 "MB.SheetClassFollower": "Default Mork Borg Follower Sheet",
 "MB.Shield": "Shield",
 "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
-"MB.ShortRest": "Short Rest",
 "MB.Silver": "Silver",
 "MB.StandsFirm": "Stands firm",
+"MB.Starvation": "Starvation",
 "MB.TabDescription": "Description",
 "MB.TabDetails": "Details",
 "MB.TabFeats": "Feats",
