--- a/lang/sv.json
+++ b/lang/sv.json
@@ -56,10 +56,12 @@
 "MB.FollowerValue": "Följarvärde",
 "MB.HandedOne": "Enhands",
 "MB.HandedTwo": "Tvåhands",
+"MB.Heal": "Läk",
 "MB.Hit": "TRÄFFA",
 "MB.HitPoints": "Träffpoäng",
 "MB.HP":"TP",
 "MB.IncomingAttack": "Inkommande Attack",
+"MB.Infection": "Infektion",
 "MB.Initiative": "Initiativ",
 "MB.InitiativeEnemiesBegin": "Fienderna Börjar",
 "MB.InitiativePlayerCharactersBegin": "Rollpersonerna Börjar",
@@ -91,7 +93,6 @@
 "MB.ItemTypeWeaponPlural": "Vapen",
 "MB.ItemUnequipped": "Outrustad",
 "MB.ItemWeaponType": "Vapentyp",
-"MB.LongRest": "Länge Vila",
 "MB.Miseries": "Plågor",
 "MB.Miss": "MISSA",
 "MB.Modified": "Beräknad",
@@ -100,6 +101,7 @@
 "MB.MoraleSurrenders": "Ger upp",
 "MB.Name": "Namn",
 "MB.NoActiveEncounter": "Inget aktivt möte",
+"MB.NoEffect": "Ingen effekt",
 "MB.Omens": "Järtecken",
 "MB.Outcome": "Resultat",
 "MB.PartyInitiative": "Grupp Initiativ",
@@ -115,7 +117,7 @@
 "MB.ReactionHelpful": "Hjälpsam",
 "MB.ReactionIndifferent": "Obrydd",
 "MB.ReactionKill": "Döda!",
-"MB.ShortRest": "Kort Vila",
+"MB.Rest": "Vila",
 "MB.Roll": "Rulla",
 "MB.RollFormula": "Rulla Formel",
 "MB.RollLabel": "Rulla Märka",
@@ -129,6 +131,7 @@
 "MB.ShieldUseText": "-1 skada, eller låt bryta sönder for at ignorera en attack",
 "MB.Silver": "Silver",
 "MB.StandsFirm": "Står fast",
+"MB.Starvation": "Svält",
 "MB.TabDescription": "Beskrivning",
 "MB.TabDetails": "Detaljer",
 "MB.TabFeats": "Förmågor",
