Add wield power template and fancy handling.

--- a/lang/en.json
+++ b/lang/en.json
@@ -37,6 +37,7 @@
 "MB.CreatureArmor": "Armor",
 "MB.CreatureAttack": "Attack",
 "MB.CreatureSpecial": "Special",
+"MB.CriticalSuccess": "Critical Success",
 "MB.Damage": "damage",
 "MB.DamageDie": "Damage Die",
 "MB.DamageReduction": "Damage Reduction",
@@ -51,6 +52,7 @@
 "MB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
 "MB.EquipAWeaponToAttack": "Equip a weapon to attack.",
 "MB.Equipment": "Equipment",
+"MB.Failure": "Failure",
 "MB.FollowerSpeciality": "Speciality",
 "MB.FollowerTrait": "Trait",
 "MB.FollowerValue": "Value",
@@ -132,6 +134,7 @@
 "MB.Silver": "Silver",
 "MB.StandsFirm": "Stands firm",
 "MB.Starvation": "Starvation",
+"MB.Success": "Success",
 "MB.TabDescription": "Description",
 "MB.TabDetails": "Details",
 "MB.TabFeats": "Feats",
@@ -148,8 +151,10 @@
 "MB.Vs": "vs",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
+"MB.Wield": "Wield",
 "MB.WieldAPower": "Wield a Power",
 "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
+"MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
 "MB.YouHaveNoFeats": "You have no Feats",
 "MB.YouHaveNoScrolls": "You have no Scrolls",
 
