--- a/lang/sv.json
+++ b/lang/sv.json
@@ -37,6 +37,7 @@
 "MB.CreatureArmor": "Rustning",
 "MB.CreatureAttack": "Attack",
 "MB.CreatureSpecial": "Särskild",
+"MB.CriticalSuccess": "Succé",
 "MB.Damage": "skada",
 "MB.DamageDie": "Skadetärning",
 "MB.DamageReduction": "Skadreduktion",
@@ -51,6 +52,7 @@
 "MB.EquipArmorToAbsorb": "Utrusta rustning för absorbera skador.",
 "MB.EquipAWeaponToAttack": "Utrusta ett vapen för att attackera.",
 "MB.Equipment": "Utrustning",
+"MB.Failure": "Misslyckande",
 "MB.FollowerSpeciality": "Specialitet",
 "MB.FollowerTrait": "Följardrag",
 "MB.FollowerValue": "Följarvärde",
@@ -132,6 +134,7 @@
 "MB.Silver": "Silver",
 "MB.StandsFirm": "Står fast",
 "MB.Starvation": "Svält",
+"MB.Success": "Framgång",
 "MB.TabDescription": "Beskrivning",
 "MB.TabDetails": "Detaljer",
 "MB.TabFeats": "Förmågor",
@@ -148,7 +151,9 @@
 "MB.Vs": "mot",
 "MB.WeaponTypeMelee": "Närkamp",
 "MB.WeaponTypeRanged": "Avstånd",
+"MB.Wield": "Nyttja",
 "MB.WieldAPower": "Nyttja en Kraft",
+"MB.WieldAPowerDizzy": "blir sluddrig i en timme och kan inte nyttja Krafter under den tiden",
 "MB.WieldAPowerText": "NÄR SG12 eller -t2 TP och inga Krafter i 1 tim.",
 "MB.YouHaveNoFeats": "Du har inga Förmågor",
 "MB.YouHaveNoScrolls": "Du har inga Rullar",
