Auto-deduct wield a power uses, and fix up fumble text.

--- a/lang/en.json
+++ b/lang/en.json
@@ -104,6 +104,7 @@
 "MB.Name": "Name",
 "MB.NoActiveEncounter": "No Active Encounter",
 "MB.NoEffect": "No effect",
+"MB.NoPowerUsesRemaining": "No Power uses remaining",
 "MB.Omens": "Omens",
 "MB.Outcome": "Outcome",
 "MB.PartyInitiative": "Party Initiative",
@@ -153,6 +154,7 @@
 "MB.WeaponTypeRanged": "Ranged",
 "MB.Wield": "Wield",
 "MB.WieldAPower": "Wield a Power",
+"MB.WieldAPowerFumble": "Fumble - Roll an Arcane Catastrophe.",
 "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
 "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
 "MB.YouHaveNoFeats": "You have no Feats",
