--- a/lang/sv.json
+++ b/lang/sv.json
@@ -104,6 +104,7 @@
 "MB.Name": "Namn",
 "MB.NoActiveEncounter": "Inget aktivt möte",
 "MB.NoEffect": "Ingen effekt",
+"MB.NoPowerUsesRemaining": "Nollkraftnummer",
 "MB.Omens": "Järtecken",
 "MB.Outcome": "Resultat",
 "MB.PartyInitiative": "Grupp Initiativ",
@@ -154,6 +155,7 @@
 "MB.Wield": "Nyttja",
 "MB.WieldAPower": "Nyttja en Kraft",
 "MB.WieldAPowerDizzy": "blir sluddrig i en timme och kan inte nyttja Krafter under den tiden",
+"MB.WieldAPowerFumble": "Fummel - Slå Arcane Catastrophe.",
 "MB.WieldAPowerText": "NÄR SG12 eller -t2 TP och inga Krafter i 1 tim.",
 "MB.YouHaveNoFeats": "Du har inga Förmågor",
 "MB.YouHaveNoScrolls": "Du har inga Rullar",
