Add Get Better button.

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -56,6 +56,7 @@
 "MB.FollowerSpeciality": "Specialitet",
 "MB.FollowerTrait": "Följardrag",
 "MB.FollowerValue": "Följarvärde",
+"MB.GetBetter": "Förbättra",
 "MB.HandedOne": "Enhands",
 "MB.HandedTwo": "Tvåhands",
 "MB.Heal": "Läk",
