--- a/lang/en.json
+++ b/lang/en.json
@@ -56,6 +56,7 @@
 "MB.FollowerSpeciality": "Speciality",
 "MB.FollowerTrait": "Trait",
 "MB.FollowerValue": "Value",
+"MB.GetBetter": "Get Better",
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
 "MB.Heal": "Heal",
