First cut of a character generator.

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -13,6 +13,7 @@
 "MB.Armor": "Rustning",
 "MB.ArmorCurrentTier": "Nuvarande Nivå",
 "MB.ArmorMaxTier": "Max Nivå",
+"MB.ArmorTable": "Rustningtabell",
 "MB.ArmorTierHeavy": "Tung",
 "MB.ArmorTierLight": "Lätt",
 "MB.ArmorTierMedium": "Medium",
@@ -27,9 +28,6 @@
 "MB.CarryingRule": "STY+8 objekt eller SG+2 SMI/STY test.",
 "MB.Class": "Klass",
 "MB.ClassAbilities": "Egenskaper",
-"MB.ClassOmenDie": "Järtecknets Tärning",
-"MB.ClassStartingHitPoints": "Börjande Träffpoäng",
-"MB.ClassStartingSilver": "Börjande Silver",
 "MB.ContainerAmountIn": "I en Behållare",
 "MB.ContainerHolds": "håller",
 "MB.ContainerSpace": "Volym",
@@ -46,6 +44,7 @@
 "MB.DefendCritText": "Succé: RP får en fri attack.",
 "MB.DefendFumbleText": "Fummel: RP tar dubbel skada, rustningen sänks också en nivå.",
 "MB.Description": "Beskrivning",
+"MB.Dice": "Tärningar",
 "MB.Dodge": "Undvika",
 "MB.DR": "SG",
 "MB.Encumbered": "Överbelastad",
@@ -69,6 +68,7 @@
 "MB.InitiativeEnemiesBegin": "Fienderna Börjar",
 "MB.InitiativePlayerCharactersBegin": "Rollpersonerna Börjar",
 "MB.Is": "är",
+"MB.Items": "Objekt",
 "MB.ItemAgilityDRModifier": "Smidighet SG Modifikation",
 "MB.ItemCapacity": "Kapacitet",
 "MB.ItemCreate": "Skapa Objekt",
@@ -123,6 +123,7 @@
 "MB.ReactionKill": "Döda!",
 "MB.Rest": "Vila",
 "MB.Roll": "Rulla",
+"MB.Rolls": "Rullar",
 "MB.RollFormula": "Rulla Formel",
 "MB.RollLabel": "Rulla Märka",
 "MB.RollPartyInitiative": "Rulla Grupp Initiativ",
@@ -151,6 +152,7 @@
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Typ",
 "MB.Vs": "mot",
+"MB.WeaponTableDie": "Vapentabell",
 "MB.WeaponTypeMelee": "Närkamp",
 "MB.WeaponTypeRanged": "Avstånd",
 "MB.Wield": "Nyttja",
