--- a/lang/en.json
+++ b/lang/en.json
@@ -13,6 +13,7 @@
 "MB.Armor": "Armor",
 "MB.ArmorCurrentTier": "Current Tier",
 "MB.ArmorMaxTier": "Max Tier",
+"MB.ArmorTable": "Armor Table",
 "MB.ArmorTierHeavy": "Heavy",
 "MB.ArmorTierLight": "Light",
 "MB.ArmorTierMedium": "Medium",
@@ -27,9 +28,6 @@
 "MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
 "MB.Class": "Class",
 "MB.ClassAbilities": "Abilities",
-"MB.ClassOmenDie": "Omen Die",
-"MB.ClassStartingHitPoints": "Starting Hit Points",
-"MB.ClassStartingSilver": "Starting Silver",
 "MB.ContainerAmountIn": "In Container",
 "MB.ContainerHolds": "holds",
 "MB.ContainerSpace": "Container Space",
@@ -46,6 +44,7 @@
 "MB.DefendCritText": "Crit: Gain free attack.",
 "MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
 "MB.Description": "Description",
+"MB.Dice": "Dice",
 "MB.Dodge": "Dodge",
 "MB.DR": "DR",
 "MB.Encumbered": "Encumbered",
@@ -69,6 +68,7 @@
 "MB.InitiativeEnemiesBegin": "Enemies Begin",
 "MB.InitiativePlayerCharactersBegin": "Player Characters Begin",
 "MB.Is": "is",
+"MB.Items": "Items",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
 "MB.ItemCreate": "Create Item",
@@ -123,6 +123,7 @@
 "MB.ReactionKill": "Kill!",
 "MB.Rest": "Rest",
 "MB.Roll": "Roll",
+"MB.Rolls": "Rolls",
 "MB.RollFormula": "Roll Formula",
 "MB.RollLabel": "Roll Label",
 "MB.RollPartyInitiative": "Roll Party Initiative",
@@ -135,6 +136,7 @@
 "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
 "MB.Silver": "Silver",
 "MB.StandsFirm": "Stands firm",
+"MB.Starting": "Starting",
 "MB.Starvation": "Starvation",
 "MB.Success": "Success",
 "MB.TabDescription": "Description",
@@ -151,6 +153,7 @@
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Type",
 "MB.Vs": "vs",
+"MB.WeaponTable": "Weapon Table",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
 "MB.Wield": "Wield",
