Add a Scvmify icon button next to character class edit.

--- a/lang/en.json
+++ b/lang/en.json
@@ -26,6 +26,7 @@
 "MB.Carrying": "Carrying",
 "MB.CarryingCapacity": "Carrying Capacity",
 "MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
+"MB.Cancel": "Cancel",
 "MB.Class": "Class",
 "MB.ClassAbilities": "Abilities",
 "MB.ContainerAmountIn": "In Container",
@@ -129,6 +130,7 @@
 "MB.RollPartyInitiative": "Roll Party Initiative",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
+"MB.Scvmify": "Scvmify",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
 "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
 "MB.SheetClassFollower": "Default Mork Borg Follower Sheet",
