--- a/lang/sv.json
+++ b/lang/sv.json
@@ -22,6 +22,7 @@
 "MB.AttackCritText": "Succé: ×2 skada, rustningen/ skyddet sänks också en nivå.",
 "MB.AttackFumbleText": "Fummel: Vapnet går sönder eller förloras.",
 "MB.Base": "Bas",
+"MB.Cancel": "Avbryt",
 "MB.CarryWeight": "Vikt",
 "MB.Carrying": "Bärande",
 "MB.CarryingCapacity": "Bärförmåga",
@@ -129,6 +130,7 @@
 "MB.RollPartyInitiative": "Rulla Grupp Initiativ",
 "MB.ScrollTypeSacred": "Helig",
 "MB.ScrollTypeUnclean": "Vanhelga",
+"MB.Scvmify": "Scvmify",
 "MB.SheetClassCharacter": "Mörk Borg Rollformulär",
 "MB.SheetClassCreature": "Mörk Borg Varelseformulär",
 "MB.SheetClassFollower": "Mörk Borg Följerformulär",
