--- a/lang/sv.json
+++ b/lang/sv.json
@@ -22,6 +22,7 @@
 "MB.AttackCritText": "Succé: ×2 skada, rustningen/ skyddet sänks också en nivå.",
 "MB.AttackFumbleText": "Fummel: Vapnet går sönder eller förloras.",
 "MB.Base": "Bas",
+"MB.Broken": "Utslagen",
 "MB.Cancel": "Avbryt",
 "MB.CarryWeight": "Vikt",
 "MB.Carrying": "Bärande",
