Refactor directories and add container Actor.

--- a/lang/en.json
+++ b/lang/en.json
@@ -132,6 +132,7 @@
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
+"MB.SheetClassContainer": "Default Mork Borg Container Sheet",
 "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
 "MB.SheetClassFollower": "Default Mork Borg Follower Sheet",
 "MB.Shield": "Shield",
@@ -141,6 +142,7 @@
 "MB.Starting": "Starting",
 "MB.Starvation": "Starvation",
 "MB.Success": "Success",
+"MB.TabContents": "Contents",
 "MB.TabDescription": "Description",
 "MB.TabDetails": "Details",
 "MB.TabFeats": "Feats",
