--- a/lang/sv.json
+++ b/lang/sv.json
@@ -132,6 +132,7 @@
 "MB.ScrollTypeSacred": "Helig",
 "MB.ScrollTypeUnclean": "Vanhelga",
 "MB.SheetClassCharacter": "Mörk Borg Rollformulär",
+"MB.SheetClassContainer": "Mörk Borg Behållare",
 "MB.SheetClassCreature": "Mörk Borg Varelseformulär",
 "MB.SheetClassFollower": "Mörk Borg Följerformulär",
 "MB.Shield": "Sköld",
@@ -140,6 +141,7 @@
 "MB.StandsFirm": "Står fast",
 "MB.Starvation": "Svält",
 "MB.Success": "Framgång",
+"MB.TabContents": "Innehåll",
 "MB.TabDescription": "Beskrivning",
 "MB.TabDetails": "Detaljer",
 "MB.TabFeats": "Förmågor",
