Calculate and show capacity current/max.

--- a/lang/en.json
+++ b/lang/en.json
@@ -31,6 +31,7 @@
 "MB.Class": "Class",
 "MB.ClassAbilities": "Abilities",
 "MB.ContainerAmountIn": "In Container",
+"MB.ContainerHolding": "Holding",
 "MB.ContainerHolds": "holds",
 "MB.ContainerSpace": "Container Space",
 "MB.CreateNewItem": "Create New Item",
@@ -64,6 +65,7 @@
 "MB.Hit": "HIT",
 "MB.HitPoints": "Hit Points",
 "MB.HP": "HP",
+"MB.Holding": "Holding",
 "MB.IncomingAttack": "Incoming Attack",
 "MB.Infection": "Infection",
 "MB.Initiative": "Initiative",
