Add a foundry default color scheme.

--- a/lang/en.json
+++ b/lang/en.json
@@ -177,6 +177,7 @@
 "SETTINGS.MBColorSchemeHint": "Choose a color scheme for the UI.",
 "SETTINGS.MBFontScheme": "Font Scheme",
 "SETTINGS.MBFontSchemeHint": "Choose a font scheme for the UI.",
+"SETTINGS.MBFoundryDefault": "Foundry Default",
 "SETTINGS.MBLegible": "Legible",
 "SETTINGS.MBWhiteOnBlackPink": "White on black (pink)",
 "SETTINGS.MBWhiteOnBlackWhite": "White on black (white)",
