--- a/lang/sv.json
+++ b/lang/sv.json
@@ -175,6 +175,7 @@
 "SETTINGS.MBColorSchemeHint": "Välja UI färgschema.",
 "SETTINGS.MBFontScheme": "Fontschema",
 "SETTINGS.MBFontSchemeHint": "Välja UI fontschema.",
+"SETTINGS.MBFoundryDefault": "Foundry Standard",
 "SETTINGS.MBLegible": "Läsbar",
 "SETTINGS.MBWhiteOnBlackPink": "Vit på svart (rosa)",
 "SETTINGS.MBWhiteOnBlackWhite": "Vit på svart (vit)",
