Add initiative buttons to character sheet, and fix party initiative in Foundry 0.8.x.

--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,7 @@
 "MB.AbilityStrengthAbbrev": "STR",
 "MB.AbilityToughness": "Toughness",
 "MB.AbilityToughnessAbbrev": "TOU",
+"MB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
 "MB.Add": "Add",
 "MB.AlternateName": "Alternate Name",
 "MB.Armor": "Armor",
@@ -67,11 +68,13 @@
 "MB.HP": "HP",
 "MB.Holding": "Holding",
 "MB.IncomingAttack": "Incoming Attack",
+"MB.Individual": "Individual",
 "MB.Infection": "Infection",
 "MB.Initiative": "Initiative",
 "MB.InitiativeEnemiesBegin": "Enemies Begin",
 "MB.InitiativePlayerCharactersBegin": "Player Characters Begin",
 "MB.Is": "is",
+"MB.Inflict": "Inflict",
 "MB.Items": "Items",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
@@ -112,6 +115,7 @@
 "MB.NoPowerUsesRemaining": "No Power uses remaining",
 "MB.Omens": "Omens",
 "MB.Outcome": "Outcome",
+"MB.Party": "Party",
 "MB.PartyInitiative": "Party Initiative",
 "MB.PerDay": "Per Day",
 "MB.PerRest": "Per Rest",
