--- a/lang/sv.json
+++ b/lang/sv.json
@@ -8,6 +8,7 @@
 "MB.AbilityStrengthAbbrev": "STY",
 "MB.AbilityToughness": "Tålighet",
 "MB.AbilityToughnessAbbrev": "TÅL",
+"MB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
 "MB.Add": "Lägg till",
 "MB.AlternateName": "Alternativt Namn",
 "MB.Armor": "Rustning",
@@ -66,7 +67,9 @@
 "MB.HitPoints": "Träffpoäng",
 "MB.HP":"TP",
 "MB.IncomingAttack": "Inkommande Attack",
+"MB.Individual": "Individuellt",
 "MB.Infection": "Infektion",
+"MB.Inflict": "Vålla",
 "MB.Initiative": "Initiativ",
 "MB.InitiativeEnemiesBegin": "Fienderna Börjar",
 "MB.InitiativePlayerCharactersBegin": "Rollpersonerna Börjar",
@@ -111,6 +114,7 @@
 "MB.NoPowerUsesRemaining": "Nollkraftnummer",
 "MB.Omens": "Järtecken",
 "MB.Outcome": "Resultat",
+"MB.Party": "Grupp",
 "MB.PartyInitiative": "Grupp Initiativ",
 "MB.PerDay": "Per Dygn",
 "MB.PerRest": "Per Vila",
