Support additional scroll type for tablets of ochre obscurity.

--- a/lang/en.json
+++ b/lang/en.json
@@ -135,8 +135,9 @@
 "MB.RollFormula": "Roll Formula",
 "MB.RollLabel": "Roll Label",
 "MB.RollPartyInitiative": "Roll Party Initiative",
-"MB.ScrollTypeSacred": "Sacred",
-"MB.ScrollTypeUnclean": "Unclean",
+"MB.ScrollTypeSacred": "Sacred Scroll",
+"MB.ScrollTypeTablet": "Tablet of Ochre Obscurity",
+"MB.ScrollTypeUnclean": "Unclean Scroll",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
 "MB.SheetClassContainer": "Default Mork Borg Container Sheet",
 "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
