--- a/lang/sv.json
+++ b/lang/sv.json
@@ -134,8 +134,9 @@
 "MB.RollFormula": "Rulla Formel",
 "MB.RollLabel": "Rulla Märka",
 "MB.RollPartyInitiative": "Rulla Grupp Initiativ",
-"MB.ScrollTypeSacred": "Helig",
-"MB.ScrollTypeUnclean": "Vanhelga",
+"MB.ScrollTypeSacred": "Helig Scrolla",
+"MB.ScrollTypeTablet": "Tavla av Ockra Dunkelhet",
+"MB.ScrollTypeUnclean": "Vanhelga Scrolla",
 "MB.SheetClassCharacter": "Mörk Borg Rollformulär",
 "MB.SheetClassContainer": "Mörk Borg Behållare",
 "MB.SheetClassCreature": "Mörk Borg Varelseformulär",
