Add support for Feat rollMacro field.

--- a/lang/en.json
+++ b/lang/en.json
@@ -119,6 +119,7 @@
 "MB.PartyInitiative": "Party Initiative",
 "MB.PerDay": "Per Day",
 "MB.PerRest": "Per Rest",
+"MB.RollMacro": "Roll Macro",
 "MB.Powers": "Powers",
 "MB.PowersPerDayText": "PRE+d4 times per day",
 "MB.PowerUsesRemaining": "Uses Remaining",
