Improve various displayed formula and formatting in roll cards.

--- a/lang/en.json
+++ b/lang/en.json
@@ -173,6 +173,7 @@
 "MB.WieldAPowerFumble": "Fumble - Roll an Arcane Catastrophe.",
 "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
 "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
+"MB.YouAreHit": "You are Hit",
 "MB.YouHaveNoFeats": "You have no Feats",
 "MB.YouHaveNoScrolls": "You have no Scrolls",
 
