German translation proposal
not done yet, still working on it

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,53 +1,53 @@
 {
-"MB.Abilities": "Abilities",
-"MB.AbilityAgility": "Agility",
+"MB.Abilities": "Fähigkeiten",
+"MB.AbilityAgility": "Agiliät",
 "MB.AbilityAgilityAbbrev": "AGI",
-"MB.AbilityPresence": "Presence",
-"MB.AbilityPresenceAbbrev": "PRE",
-"MB.AbilityStrength": "Strength",
+"MB.AbilityPresence": "Ausstrahlung",
+"MB.AbilityPresenceAbbrev": "AUS",
+"MB.AbilityStrength": "Stärke",
 "MB.AbilityStrengthAbbrev": "STR",
-"MB.AbilityToughness": "Toughness",
-"MB.AbilityToughnessAbbrev": "TOU",
+"MB.AbilityToughness": "Zähigkeit",
+"MB.AbilityToughnessAbbrev": "ZÄH",
 "MB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
-"MB.Add": "Add",
-"MB.AlternateName": "Alternate Name",
-"MB.Armor": "Armor",
-"MB.ArmorCurrentTier": "Current Tier",
-"MB.ArmorMaxTier": "Max Tier",
-"MB.ArmorTable": "Armor Table",
-"MB.ArmorTierHeavy": "Heavy",
-"MB.ArmorTierLight": "Light",
-"MB.ArmorTierMedium": "Medium",
-"MB.ArmorTierNone": "None",
-"MB.Attack": "Attack",
-"MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
-"MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
-"MB.Base": "Base",
-"MB.Broken": "Broken",
-"MB.CarryWeight": "Carry Weight",
-"MB.Carrying": "Carrying",
-"MB.CarryingCapacity": "Carrying Capacity",
-"MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
-"MB.Cancel": "Cancel",
-"MB.Class": "Class",
-"MB.ClassAbilities": "Abilities",
+"MB.Add": "Hinzufügen",
+"MB.AlternateName": "Alternativer Name",
+"MB.Armor": "Rüstung",
+"MB.ArmorCurrentTier": "Momentane Stufe",
+"MB.ArmorMaxTier": "Maximale Stufe",
+"MB.ArmorTable": "Rüstungstabelle",
+"MB.ArmorTierHeavy": "Schwer",
+"MB.ArmorTierLight": "Leicht",
+"MB.ArmorTierMedium": "Mittel",
+"MB.ArmorTierNone": "Keine",
+"MB.Attack": "Attacke",
+"MB.AttackCritText": "Krit: x2 Schaden, Rüstung des Ziel um eine Stufe reduziert.",
+"MB.AttackFumbleText": "Ungeschicktheit: Waffe zerbricht oder geht verloren.",
+"MB.Base": "Basis",
+"MB.Broken": "Kaputt",
+"MB.CarryWeight": "Traglast",
+"MB.Carrying": "tragen",
+"MB.CarryingCapacity": "Tragkapazität",
+"MB.CarryingRule": "STR+8 tragbare Gegenstände oder DR+2 on AGI/STR Probe.",
+"MB.Cancel": "Abbrechen",
+"MB.Class": "Klasse",
+"MB.ClassAbilities": "Fähigkeiten",
 "MB.ContainerAmountIn": "In Container",
 "MB.ContainerHolding": "Holding",
-"MB.ContainerHolds": "holds",
-"MB.ContainerSpace": "Container Space",
-"MB.CreateNewItem": "Create New Item",
-"MB.CreatureArmor": "Armor",
-"MB.CreatureAttack": "Attack",
-"MB.CreatureSpecial": "Special",
-"MB.CriticalSuccess": "Critical Success",
-"MB.Damage": "damage",
-"MB.DamageDie": "Damage Die",
-"MB.DamageReduction": "Damage Reduction",
-"MB.DamageReductionDie": "Damage Reduction Die",
-"MB.Defend": "Defend",
-"MB.DefendCritText": "Crit: Gain free attack.",
-"MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
-"MB.Description": "Description",
+"MB.ContainerHolds": "hält",
+"MB.ContainerSpace": "Fassungsvermögen",
+"MB.CreateNewItem": "Erstelle neues Item",
+"MB.CreatureArmor": "Rüstung",
+"MB.CreatureAttack": "Attacke",
+"MB.CreatureSpecial": "Spezial",
+"MB.CriticalSuccess": "Kritischer Erfolg",
+"MB.Damage": "Schaden",
+"MB.DamageDie": "Schadenswürfel",
+"MB.DamageReduction": "Schadensreduktion",
+"MB.DamageReductionDie": "Schadensreduktionswürfel",
+"MB.Defend": "Verteidigen",
+"MB.DefendCritText": "Krit: erhalte freie Attacke.",
+"MB.DefendFumbleText": "Ungeschicktheit: Erleide x2 Schaden, Rüstung um eine Stufe reduziert.",
+"MB.Description": "Beschreibung",
 "MB.Dice": "Dice",
 "MB.Dodge": "Dodge",
 "MB.DR": "DR",
