--- a/lang/de.json
+++ b/lang/de.json
@@ -31,7 +31,7 @@
 "MB.Cancel": "Abbrechen",
 "MB.Class": "Klasse",
 "MB.ClassAbilities": "Fähigkeiten",
-"MB.ContainerAmountIn": "In Container",
+"MB.ContainerAmountIn": "In Behälter",
 "MB.ContainerHolding": "Holding",
 "MB.ContainerHolds": "hält",
 "MB.ContainerSpace": "Fassungsvermögen",
@@ -48,8 +48,8 @@
 "MB.DefendCritText": "Krit: erhalte freie Attacke.",
 "MB.DefendFumbleText": "Ungeschicktheit: Erleide x2 Schaden, Rüstung um eine Stufe reduziert.",
 "MB.Description": "Beschreibung",
-"MB.Dice": "Dice",
-"MB.Dodge": "Dodge",
+"MB.Dice": "Würfel",
+"MB.Dodge": "Ausweichen",
 "MB.DR": "DR",
 "MB.Encumbered": "Encumbered",
 "MB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
